# morphism-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md  category-theory-basics.md  cli-reference.md  cli-usage.md  configuration-reference.md  data-flow-model.md  examples.md  extending-the-engine.md  how-it-works.md  installation.md  internal-modules-reference.md  performance.md  pipelines.md  quick-start.md  transformations-synthesis.md  type-system.md  verification-z3.md
morphism_engine/: live_synthesizer.py  main.py  node.py  pipeline.py  schemas.py  synthesizer.py  test_phase1.py  test_phase2.py  test_phase3_4.py  test_phase5_local.py  test_phase6_shell.py  z3_verifier.py
scripts/: render_benchmark_plots.py  run_benchmarks.py
src/morphism/: __init__.py  config.py  exceptions.py
src/morphism/ai/: synthesizer.py
src/morphism/benchmarks/: __init__.py  dirty_data.py  latency.py  suite.py
src/morphism/cli/: morphism.tcss  shell.py  tui.py
src/morphism/core/: cache.py  inference.py  native_node.py  node.py  pipeline.py  schemas.py  transport.py
src/morphism/math/: z3_verifier.py
src/morphism/utils/: logger.py
tests/: test_phase12_streaming.py  test_phase13_system_upgrades.py  test_phase2.py
